added different files register and login

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -63,10 +63,23 @@
         </div>
 
         <!-- Submit Button -->
-        <button type="submit"
-            class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
-            Register
+        <button type="submit" [disabled]="isLoading"
+            class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition flex items-center justify-center relative">
+
+            <!-- Invisible placeholder to reserve space -->
+            <span [class.invisible]="isLoading">Register</span>
+
+            <!-- Loader on top -->
+            <div *ngIf="isLoading"
+                class="absolute inset-0 flex items-center justify-center bg-blue-600 bg-opacity-60 rounded-lg">
+                <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 24 24">
+                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
+                </svg>
+            </div>
         </button>
+
 
     </form>
 </div>
